docs/pages/versions/v49.0.0/index.mdx
---
title: Reference
hideTOC: true
---

import RedirectNotification from '~/components/plugins/RedirectNotification';
import { BoxLink } from '~/ui/components/BoxLink';
import { Terminal } from '~/ui/components/Snippet';
import { CODE } from '~/ui/components/Text';

<RedirectNotification>
  The page you are looking for does not exist in this SDK version. It may have been deprecated or
  added to a newer SDK version.
</RedirectNotification>

The Expo SDK provides access to device and system functionality such as contacts, camera, gyroscope, GPS location, and so on, in the form of packages. You can install any Expo SDK package using the `npx expo install` command. For example, three different packages are installed using the following command:

<Terminal cmd={['$ npx expo install expo-camera expo-contacts expo-sensors']} />

After installing one or more packages, you can import them into your JavaScript code:

```js
import { Camera } from 'expo-camera';
import * as Contacts from 'expo-contacts';
import { Gyroscope } from 'expo-sensors';
```

This allows you to write [`Contacts.getContactsAsync()`](/versions/latest/sdk/contacts#contactsgetcontactsasynccontactquery) and read the contacts from the device, read the gyroscope sensor to detect device movement, or start the phone's camera and take photos.

## All Expo SDK packages work in any React Native app

Expo apps are React Native apps, so all Expo SDK packages work in any React Native app with the `expo` package installed and configured. The easiest way to create a React Native app with support for Expo SDK packages is to use `create-expo-app`. However, you can also add Expo SDK support to an existing React Native app with the `npx install-expo-modules` command.

<Terminal
  cmd={['# Create a project named my-app', '$ npx create-expo-app my-app --template bare-minimum']}
  cmdCopy="npx create-expo-app my-app --template bare-minimum"
/>

<BoxLink
  title="Install Expo SDK packages in existing React Native apps"
  href="/bare/installing-expo-modules"
  description={
    <>
      Learn more about configuring projects created with <CODE>npx react-native init</CODE> to Expo
      SDK packages.
    </>
  }
/>

<BoxLink
  title="Using libraries"
  description="Learn how to install Expo SDK packages in your project."
  href="/workflow/using-libraries"
/>

## Using pre-release versions

New Expo SDK versions are released three times each year. Between these releases, we publish pre-release versions of the `expo` package and all of the Expo SDK packages. Pre-releases are not considered stable and should only be used if you are comfortable with the risk of encountering bugs or other issues.

### Canary releases

Canary releases represent a snapshot of the state of the `main` branch at the time they are published. Canary package versions include `-canary` in the name, along with the date and commit hash, such as `50.0.0-canary-20231205-250b31f`. To install the latest canary release:

<Terminal
  cmd={[
    '# Install the alpha version of expo and its related packages',
    '$ npm install expo@canary && npx expo install --fix',
  ]}
  cmdCopy="npm install expo@canary && npx expo install --fix"
/>

You can often use pre-release versions of individual packages with stable releases of the Expo SDK. There may occasionally be incompatibilities or other issues that arise in canary-quality releases. You may want to [silence dependency validation warnings](/more/expo-cli/#configuring-dependency-validation) if you opt in to the canary package and once you have verified that it works well for your use cases.

### Beta releases

Before each Expo SDK release, we publish beta versions of the `expo` package and all of the Expo SDK packages. Beta releases are considered much more stable than canary releases, and we encourage developers to try them out on their apps and share their feedback. Beta releases use the `beta` tag on npm and follow the instructions in the related [changelog](https://expo.dev/changelog) post.

## Each Expo SDK version depends on a React Native version

Every quarter there is a new Expo SDK release that typically updates to the latest stable versions of React Native and React Native Web, and includes a variety of bug fixes, features, and improvements to the Expo SDK.

| Expo SDK version | React Native version | React Native Web version |
| ---------------- | -------------------- | ------------------------ |
| 49.0.0           | 0.72                 | 0.19.6                   |
| 48.0.0           | 0.71                 | 0.18.10                  |
| 47.0.0           | 0.70                 | 0.18.9                   |
| 46.0.0           | 0.69                 | 0.18.7                   |

### Support for other React Native versions

Packages in the Expo SDK are intended to support the target React Native version for that SDK. Typically, they will not support older versions of React Native, but they may. When a new version of React Native is released, the latest versions of the Expo SDK packages are typically updated to support it. However, this may take weeks or more, depending on the extent of the changes in the release.

## Support for Android and iOS versions

Each version of Expo SDK supports a minimum OS version of Android and iOS. For Android, the `compileSdkVersion` is defined which tells the [Gradle](https://developer.android.com/studio/build) which Android SDK version to use to compile the app. This also means that you can use the Android API features included in that SDK version and from the previous versions.

| Expo SDK version | Android version | `compileSdkVersion` | iOS version |
| ---------------- | --------------- | ------------------- | ----------- |
| 49.0.0           | 5+              | 33                  | 13+         |
| 48.0.0           | 5+              | 33                  | 13+         |
| 47.0.0           | 5+              | 31                  | 13+         |
| 46.0.0           | 5+              | 31                  | 12.4+       |
