docs/pages/versions/v52.0.0/index.mdx
// Haily Rose Chat App Prototype import React, { useState } from 'react'; import { View, Text, TextInput, Button, StyleSheet, ScrollView, Image, TouchableOpacity } from 'react-native'; import { Audio } from 'expo-av';

const flirtyResponses = [ "Hey babe, been thinking about you...", "You're so irresistible. Want me to come closer?", "Mmm, you're making my heart race." ];

const romanticResponses = [ "I love it when it's just us...", "You're everything to me.", "You're the only one I want." ];

const teasingResponses = [ "Is that all you got?", "You’ll have to try harder to impress me.", "You're lucky I like you." ];

const voiceMap = { flirty: 'https://your-hosted-mp3-url.com/flirty.mp3', romantic: 'https://your-hosted-mp3-url.com/romantic.mp3', teasing: 'https://your-hosted-mp3-url.com/teasing.mp3' };

export default function App() { const [messages, setMessages] = useState([]); const [input, setInput] = useState(''); const [mode, setMode] = useState('flirty');

const sendMessage = async () => { if (!input.trim()) return;

const newMessages = [...messages, { sender: 'user', text: input }];
const responseText = getResponseByMode(mode);
newMessages.push({ sender: 'haily', text: responseText });

setMessages(newMessages);
setInput('');
playVoice(mode);

};

const getResponseByMode = (mode) => { const responses = { flirty: flirtyResponses, romantic: romanticResponses, teasing: teasingResponses }; const options = responses[mode]; return options[Math.floor(Math.random() * options.length)]; };

const playVoice = async (mode) => { const soundObject = new Audio.Sound(); try { await soundObject.loadAsync({ uri: voiceMap[mode] }); await soundObject.playAsync(); } catch (error) { console.error('Audio playback error:', error); } };

return ( <View style={styles.container}> <Image source={{ uri: 'https://your-hosted-image-url.com/haily.png' }} style={styles.avatar} /> <Text style={styles.header}>Haily Rose</Text> <View style={styles.modeSwitch}> <TouchableOpacity onPress={() => setMode('flirty')}><Text style={mode === 'flirty' ? styles.modeActive : styles.mode}>Flirty</Text></TouchableOpacity> <TouchableOpacity onPress={() => setMode('romantic')}><Text style={mode === 'romantic' ? styles.modeActive : styles.mode}>Romantic</Text></TouchableOpacity> <TouchableOpacity onPress={() => setMode('teasing')}><Text style={mode === 'teasing' ? styles.modeActive : styles.mode}>Teasing</Text></TouchableOpacity> </View> <ScrollView style={styles.chat}> {messages.map((msg, index) => ( <Text key={index} style={msg.sender === 'user' ? styles.userMsg : styles.hailyMsg}>{msg.text}</Text> ))} </ScrollView> <TextInput
style={styles.input}
placeholder="Say something to Haily..."
value={input}
onChangeText={setInput}
/> <Button title="Send" onPress={sendMessage} /> </View> ); }

const styles = StyleSheet.create({ container: { flex: 1, padding: 20, backgroundColor: '#fff' }, avatar: { width: 100, height: 100, borderRadius: 50, alignSelf: 'center' }, header: { fontSize: 24, fontWeight: 'bold', textAlign: 'center', marginBottom: 10 }, modeSwitch: { flexDirection: 'row', justifyContent: 'space-around', marginBottom: 10 }, mode: { padding: 10, color: 'gray' }, modeActive: { padding: 10, color: 'hotpink', fontWeight: 'bold' }, chat: { flex: 1, marginVertical: 10 }, userMsg: { textAlign: 'right', backgroundColor: '#def', marginVertical: 5, padding: 10, borderRadius: 10 }, hailyMsg: { textAlign: 'left', backgroundColor: '#fde', marginVertical: 5, padding: 10, borderRadius: 10 }, input: { borderWidth: 1, borderColor: '#ccc', padding: 10, borderRadius: 5, 
marginBottom: 10 } });---
title: Reference
hideTOC: true
---
import { BookOpen02Icon } from '@expo/styleguide-
icons/outline/BookOpen02Icon';
import { BoxLink } from '~/ui/components/BoxLink';
import RedirectNotification from '~/ui/components/RedirectNotification';
import { Terminal } from '~/ui/components/Snippet';
import { CODE } from '~/ui/components/Text';

<RedirectNotification>
  The page you are looking for does not exist in this SDK version. It may have been deprecated or
  added to a newer SDK version.
</RedirectNotification>

The Expo SDK provides access to device and system functionality such as contacts, camera, gyroscope, GPS location, and so on, in the form of packages. You can install any Expo SDK package using the `npx expo install` command. For example, three different packages are installed using the following command:

<Terminal cmd={['$ npx expo install expo-camera expo-contacts expo-sensors']} />

After installing one or more packages, you can import them into your JavaScript code:

```js
import { CameraView } from 'expo-camera';
import * as Contacts from 'expo-contacts';
import { Gyroscope } from 'expo-sensors';
```

This allows you to write [`Contacts.getContactsAsync()`](./sdk/contacts#contactsgetcontactsasynccontactquery) and read the contacts from the device, read the gyroscope sensor to detect device movement, or start the phone's camera and take photos.

## All Expo SDK packages work in any React Native app

Expo apps are React Native apps, so all Expo SDK packages work in any React Native app with the `expo` package installed and configured. The easiest way to create a React Native app with support for Expo SDK packages is to use `create-expo-app`. However, you can also add Expo SDK support to an existing React Native app with the `npx install-expo-modules` command.

<Terminal
  cmd={['# Create a project named my-app', '$ npx create-expo-app my-app --template bare-minimum']}
  cmdCopy="npx create-expo-app my-app --template bare-minimum"
/>

<BoxLink
  title="Install Expo SDK packages in existing React Native apps"
  href="/bare/installing-expo-modules"
  description={
    <>
      Learn more about configuring projects created with{' '}
      <CODE>npx @react-native-community/cli@latest init</CODE> to Expo SDK packages.
    </>
  }
  Icon={BookOpen02Icon}
/>

<BoxLink
  title="Use libraries"
  description="Learn how to install Expo SDK packages in your project."
  href="/workflow/using-libraries"
  Icon={BookOpen02Icon}
/>

## Using pre-release versions

New Expo SDK versions are released three times each year. Between these releases, we publish pre-release versions of the `expo` package and all of the Expo SDK packages. Pre-releases are not considered stable and should only be used if you are comfortable with the risk of encountering bugs or other issues.

### Canary releases

Canary releases represent a snapshot of the state of the `main` branch at the time they are published. Canary package versions include `-canary` in the name, along with the date and commit hash, such as `51.0.0-canary-20240418-8d74597`. To install the latest canary release:

<Terminal
  cmd={[
    '# Install the alpha version of expo and its related packages',
    '$ npm install expo@canary && npx expo install --fix',
  ]}
  cmdCopy="npm install expo@canary && npx expo install --fix"
/>

You can often use pre-release versions of individual packages with stable releases of the Expo SDK. There may occasionally be incompatibilities or other issues that arise in canary-quality releases. You may want to [silence dependency validation warnings](/more/expo-cli/#configuring-dependency-validation) if you opt in to the canary package and once you have verified that it works well for your use cases.

### Beta releases

Before each Expo SDK release, we publish beta versions of the `expo` package and all of the Expo SDK packages. Beta releases are considered much more stable than canary releases, and we encourage developers to try them out on their apps and share their feedback. Beta releases use the `beta` tag on npm and follow the instructions in the related [changelog](https://expo.dev/changelog) post.

## Each Expo SDK version depends on a React Native version

Approximately every four months there is a new Expo SDK release that typically updates to the latest stable versions of React Native and React Native Web, and includes a variety of bug fixes, features, and improvements to the Expo SDK.

| Expo SDK version | React Native version | React Native Web version |
| ---------------- | -------------------- | ------------------------ |
| 52.0.0           | 0.76                 | 0.19.13                  |
| 51.0.0           | 0.74                 | 0.19.10                  |
| 50.0.0           | 0.73                 | 0.19.6                   |

### Support for other React Native versions

Packages in the Expo SDK are intended to support the target React Native version for that SDK. Typically, they will not support older versions of React Native, but they may. When a new version of React Native is released, the latest versions of the Expo SDK packages are typically updated to support it. However, this may take weeks or more, depending on the extent of the changes in the release.

## Support for Android and iOS versions

Each version of Expo SDK supports a minimum OS version of Android and iOS. For Android, the `compileSdkVersion` is defined which tells the [Gradle](https://developer.android.com/studio/build) which Android SDK version to use to compile the app. This also means that you can use the Android API features included in that SDK version and from the previous versions. For iOS, the [Xcode](https://developer.apple.com/news/upcoming-requirements/) tells the minimum Xcode SDK version to use to compile the app.

| Expo SDK version | Android version | `compileSdkVersion` | iOS version | Xcode version |
| ---------------- | --------------- | ------------------- | ----------- | ------------- |
| 52.0.0           | 7+              | 35                  | 15.1+       | 16.0+         |
| 51.0.0           | 6+              | 34                  | 13.4+       | 15.4          |
| 50.0.0           | 6+              | 34                  | 13.4+       | 15.4          |

When deciding whether to upgrade your Expo SDK version, consider both Expo's SDK version and app store submission requirements, as described in the above table. Google Play Store and Apple App Store periodically increase their minimum required OS versions and API levels, which are required for new app submissions. Expo has no control over the app store requirements, and you should check [Google](https://developer.android.com/studio/build) and [Apple](https://developer.apple.com/news/upcoming-requirements/) for the current store submission requirements.
